// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineSnap renders 0 1`] = `
Array [
  .c0 {
  line-snap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders function 1`] = `
Array [
  .c0 {
  line-snap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders invalid theme path 1`] = `
Array [
  .c0 {
  line-snap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders negative number 1`] = `
Array [
  .c0 {
  line-snap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  line-snap: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-snap: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-snap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-snap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-snap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-snap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-snap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-snap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-snap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-snap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-snap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  line-snap: July;
}

@media May {
  .c0 {
    line-snap: August;
  }
}

@media April {
  .c0 {
    line-snap: September;
  }
}

@media January {
  .c0 {
    line-snap: November;
  }
}

@media April {
  .c0 {
    line-snap: August;
  }
}

@media June {
  .c0 {
    line-snap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-snap: July;
}

@media May {
  .c0 {
    line-snap: August;
  }
}

@media April {
  .c0 {
    line-snap: September;
  }
}

@media January {
  .c0 {
    line-snap: November;
  }
}

@media April {
  .c0 {
    line-snap: August;
  }
}

@media June {
  .c0 {
    line-snap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-snap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-snap: November;
  }
}

@media April {
  .c0 {
    line-snap: January;
  }
}

@media January {
  .c0 {
    line-snap: December;
  }
}

@media April {
  .c0 {
    line-snap: April;
  }
}

@media June {
  .c0 {
    line-snap: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-snap: November;
  }
}

@media April {
  .c0 {
    line-snap: January;
  }
}

@media January {
  .c0 {
    line-snap: December;
  }
}

@media April {
  .c0 {
    line-snap: April;
  }
}

@media June {
  .c0 {
    line-snap: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    line-snap: July;
  }
}

@media April {
  .c0 {
    line-snap: August;
  }
}

@media January {
  .c0 {
    line-snap: September;
  }
}

@media April {
  .c0 {
    line-snap: November;
  }
}

@media June {
  .c0 {
    line-snap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-snap: July;
  }
}

@media April {
  .c0 {
    line-snap: August;
  }
}

@media January {
  .c0 {
    line-snap: September;
  }
}

@media April {
  .c0 {
    line-snap: November;
  }
}

@media June {
  .c0 {
    line-snap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-snap: January;
  }
}

@media April {
  .c0 {
    line-snap: December;
  }
}

@media January {
  .c0 {
    line-snap: April;
  }
}

@media April {
  .c0 {
    line-snap: May;
  }
}

@media June {
  .c0 {
    line-snap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-snap: January;
  }
}

@media April {
  .c0 {
    line-snap: December;
  }
}

@media January {
  .c0 {
    line-snap: April;
  }
}

@media April {
  .c0 {
    line-snap: May;
  }
}

@media June {
  .c0 {
    line-snap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders postitive number 1`] = `
Array [
  .c0 {
  line-snap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders string 1`] = `
Array [
  .c0 {
  line-snap: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSnap renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`lineSnap renders valid theme path 1`] = `
Array [
  .c0 {
  line-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
